force-app/main/default/objects/Partner_Registration_Request__c/Partner_Registration_Request__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Partner Portal Access Request from Partners</description>
    <label>Partner Portal Access Request</label>
    <nameField>
        <displayFormat>PR Request-{00000000}</displayFormat>
        <label>Partner Registration Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Portal Access Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>