force-app/main/default/objects/Partner_Registration_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This is to enter Address</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>