force-app/main/default/objects/Partner_Registration_Request__c/fields/Admin_Access__c.field-meta.xml
<CustomField>
    <fullName>Admin_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabled to true when admin access is suppposed to be provided to the user</description>
    <label>Admin Access</label>
    <type>Checkbox</type>
</CustomField>