force-app/main/default/objects/Partner_Registration_Request__c/fields/Auto_Approval__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This boolean is checked once PR Request needs to be auto approved</description>
    <label>Auto Approval?</label>
    <type>Checkbox</type>
</CustomField>