force-app/main/default/objects/Partner_Registration_Request__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field is to capture City of the Address</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>