force-app/main/default/objects/Partner_Registration_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field is to store the country of the address</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>