force-app/main/default/objects/Partner_Registration_Request__c/fields/Country_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Country_Picklist__c</fullName>
    <description>This is the country picklist version.</description>
    <inlineHelpText>This is the country picklist version.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>