force-app/main/default/objects/Partner_Registration_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field is to capture email from request</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>