force-app/main/default/objects/Partner_Registration_Request__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This field is to capture First Name</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>