force-app/main/default/objects/Partner_Registration_Request__c/fields/Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is to check whether PR_request is already converted to Contact or not</description>
    <label>Is_Converted?</label>
    <type>Checkbox</type>
</CustomField>