force-app/main/default/objects/Partner_Registration_Request__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>This field is to store Job Title from the request</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>