force-app/main/default/objects/Partner_Registration_Request__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>This field is to capture Last Name</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>