force-app/main/default/objects/Partner_Registration_Request__c/fields/Partner_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://rubrik.atlassian.net/browse/PRIT24-714</description>
    <label>Partner Account Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.OwnerId</field>
            <operation>notEqual</operation>
            <value>0056f00000AzgeLAAR</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner/Distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.OwnerId</field>
            <operation>notEqual</operation>
            <value>0058Y00000B5xtOQAR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Portal Access Requests</relationshipLabel>
    <relationshipName>Partner_Portal_Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>