force-app/main/default/objects/Partner_Registration_Request__c/fields/Partner_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Registration_Status__c</fullName>
    <label>Partner Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Login Issued</fullName>
            </value>
            <value>
                <fullName>Personal Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>