force-app/main/default/objects/Partner_Registration_Request__c/fields/Patch_Key__c.field-meta.xml
<CustomField>
    <fullName>Patch_Key__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patch Key</label>
    <referenceTo>PatchManager__c</referenceTo>
    <relationshipLabel>Partner Portal Access Requests</relationshipLabel>
    <relationshipName>Partner_Portal_Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>