force-app/main/default/objects/Partner_Registration_Request__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>This field to capture phone number</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>