force-app/main/default/objects/Partner_Registration_Request__c/fields/Related_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://rubrik.atlassian.net/browse/PRIT24-687</description>
    <label>Related Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Portal Access Requests</relationshipLabel>
    <relationshipName>Partner_Portal_Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>