force-app/main/default/objects/Partner_Registration_Request__c/fields/SLA_Voilated__c.field-meta.xml
<CustomField>
    <fullName>SLA_Voilated__c</fullName>
    <description>This field track about 48 hrs SLA</description>
    <formula>IF((NOW()-CreatedDate)*24&gt; 48,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Voilated?</label>
    <type>Checkbox</type>
</CustomField>