force-app/main/default/objects/Partner_Registration_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>This field is to store State of the address</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>