force-app/main/default/objects/Partner_Registration_Request__c/fields/State_Picklist__c.field-meta.xml
<CustomField>
    <fullName>State_Picklist__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Province</valueSetName>
    </valueSet>
</CustomField>