force-app/main/default/objects/Partner_Registration_Request__c/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <description>Date of Partner Registration Status update (approved / rejected)</description>
    <label>Partner Registration Status Change Date</label>
    <type>Date</type>
</CustomField>