force-app/main/default/objects/Partner_Registration_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Registration_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Company_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Is_Converted__c</columns>
    <columns>Admin_Access__c</columns>
    <columns>Related_Partner_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Registration_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All</label>
</ListView>