force-app/main/default/objects/Partner_Registration_Request__c/listViews/All_Approved_Portal_Access_Requests.listView-meta.xml
<ListView>
    <fullName>All_Approved_Portal_Access_Requests</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Partner_Registration_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Auto_Approval__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Registration_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>All Portal Access Requests - Approved</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>