force-app/main/default/objects/Partner_Registration_Request__c/listViews/My_Partner_Registration_Requests.listView-meta.xml
<ListView>
    <fullName>My_Partner_Registration_Requests</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Partner_Registration_Status__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Partner Registration Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>