force-app/main/default/objects/Partner_Registration_Request__c/listViews/Need_to_Create_Manually.listView-meta.xml
<ListView>
    <fullName>Need_to_Create_Manually</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Company_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Is_Converted__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Registration_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Is_Converted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/30/2020 12:00 AM</value>
    </filters>
    <label>Need to Create Manually</label>
</ListView>