force-app/main/default/objects/Partner_Registration_Request__c/listViews/Unassigned_Partner_Portal_Requests.listView-meta.xml
<ListView>
    <fullName>Unassigned_Partner_Portal_Requests</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>Unassigned</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>unassigned</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>unassigned</value>
    </filters>
    <label>Unassigned Partner Portal Requests</label>
</ListView>